Style website and add new post

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -27,7 +27,10 @@
     </details>    
     <hr id="table-of-contents">
     {{ .Content }}
+    <div class="links">
     <a href="/undercoverunicorn"> >> Home</a>
+    <a href="#" class="top pull-right">Back to Top &#8593;</a>
+  </div>
   </main>
 </div>
 {{ partial "footer.html" . }}
