--- a/public/css/fonts.css
+++ b/public/css/fonts.css
@@ -1,6 +1,6 @@
 @import url('https://rsms.me/inter/inter.css');
 html { font-family:
-        'Inter',
+        'Times New Roman',
         sans-serif,
         'Apple Color Emoji',
         'Segoe UI Emoji',
@@ -8,7 +8,7 @@ html { font-family:
       }
 @supports (font-variation-settings: normal) {
   html { font-family:
-          'Inter var',
+          'Times New Roman',
           sans-serif,
           'Apple Color Emoji',
           'Segoe UI Emoji',
